<resources>
    <string name="app_name">ProjectCarlton</string>

    <string name="button_yes">Ja</string>
    <string name="button_no">Nein</string>

    <string name="API_URL">http://api.candy-bouquet.de/</string>

    <string name="API_ERROR">Ups, da ist etwas schief gelaufen! Bitte versuch es noch einmal!</string>

    <string name="loginresponse_unknown_credentials">Benutzername oder Password nicht korrekt.</string>
    <string name="loginresponse_noactivated_account">Der Account wurde noch nicht durch den Link in der Email bestätigt.</string>

    <string name="registerresponse_existing_email">Es existiert bereits ein Account mit dieser Email-Adresse.</string>
    <string name="registerresponse_existing_username">Es existiert bereits ein Account mit diesem Benutzernamen.</string>
    <string name="registerresponse_invalid_email">Invalide Email-Adresse.</string>
    <string name="registerresponse_success">Eine Email mit einem Bestätigungslink wurde an Ihre Email-Adresse geschickt.</string>

    <string name="login_username_hint">Benutzername</string>
    <string name="login_password_hint">Passwort</string>
    <string name="login_loginbutton_text">Login</string>
    <string name="login_registerbutton_text">- Registrieren -</string>

    <string name="register_email_hint">Email</string>
    <string name="register_username_hint">Benutzername</string>
    <string name="register_password_hint">Passwort</string>
    <string name="register_registerbutton_text">Registrieren</string>

    <string name="groups_action_add_title">Hinzufügen</string>
    <string name="groups_action_invites_title">Einladungen</string>
    <string name="groups_action_profile_title">Profil</string>
    <string name="groups_actionbar_title">Meine Gruppen</string>

    <string name="newgroup_title">Neue Gruppe</string>
    <string name="newgroup_groupname_hint">Gruppenname</string>
    <string name="newgroup_groupdescription_hint">Gruppenbeschreibung</string>
    <string name="newgroup_dialog_question">Wirklich erstellen?</string>

    <string name="newgroup_action_done_title">Fertig</string>

    <string name="groupinvitations_title">Einladungen</string>

    <string name="group_organizationheader_text">Verwaltung</string>
    <string name="group_invitebutton_text">Einladen</string>
    <string name="group_memberbutton_text">Mitglieder</string>
    <string name="group_personalheader_text">Persönlich</string>
    <string name="group_deletebutton_text">Gruppe löschen</string>
    <string name="group_leavebutton_text">Gruppe verlassen</string>

    <string name="invite_title">Benutzer</string>

    <string name="inviteusers_alreadyinvited_text">Eingeladen</string>

    <string name="memberlistitem_deletebutton_text">Entfernen</string>

    <string name="leavegroup_dialog_message">Gruppe wirklich verlassen?</string>
    <string name="deletegroup_dialog_message">Gruppe wirklich löschen?</string>

</resources>
