<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectcarlton.fbljk.projectcarlton.Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/register_email_hint"/>

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/register_email"
                android:hint="@string/register_username_hint"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/register_password_hint"
                android:layout_below="@id/register_username"/>

            <Button
                android:id="@+id/register_registerbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginEnd="140dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:text="@string/register_registerbutton_text"
                android:layout_below="@id/register_password"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
