<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectcarlton.fbljk.projectcarlton.Activities.Core.GroupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/group_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/group_organization_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/group_organizationheader_text"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"/>

        <View
            android:id="@+id/group_organization_header_spacer_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/group_organization_header"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/group_member_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/group_organization_header_spacer_bottom"
            android:text="@string/group_memberbutton_text"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/group_delete_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/group_member_button"
            android:text="@string/group_deletebutton_text"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_light"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:background="@android:color/transparent"/>

        <View
            android:id="@+id/group_personal_header_spacer_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/group_delete_button"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/group_personal_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/group_personalheader_text"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:layout_below="@id/group_personal_header_spacer_top"
            android:paddingStart="20dp"/>

        <View
            android:id="@+id/group_personal_header_spacer_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/group_personal_header"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/group_leave_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/group_personal_header_spacer_bottom"
            android:text="@string/group_leavebutton_text"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_light"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
